--- a/docs/fides/docs/css/cli.css
+++ b/docs/fides/docs/css/cli.css
@@ -1,24 +1,26 @@
-.label {
-  font-weight:  bold;
-  font-size: 20px;
-  padding-top: 24px;
+/* -- START: CLI Reference CSS -- */
+
+#cli-docs.cli .label {
+    font-weight: bold;
+    font-size: 20px;
+    padding-top: 24px;
 }
 
-.content {
-  padding-left: 24px;
+#cli-docs.cli .content {
+    padding-left: 24px;
 }
 
-.content + .content{
-  padding-top: 24px;
-}
-.mono {
-  font-family:  monospace;
-  font-weight:  bold;
+#cli-docs.cli .content+.content {
+    padding-top: 24px;
 }
 
-.monoi {
-  font-family:  monospace;
-  font-style: italic;
-  font-weight:  bold;
+#cli-docs.cli .mono {
+    font-family: monospace;
+    font-weight: bold;
+}
 
+#cli-docs.cli .monoi {
+    font-family: monospace;
+    font-style: italic;
+    font-weight: bold;
 }
